--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
   <section class="hero">
     <!-- Carrusel con tus imágenes locales -->
     <div class="hero-slider">
-      <div class="slide active" style="background-image: url('../Ocre/img/13.png')"></div>
+      <div class="slide active" style="background-image: url('img/13.png')"></div>
       
     </div>
     
