--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
           <div class="product-card-info">
             <h3>Ocre rojo Natural</h3>
             <div class="product-card-price">Bs/ 22.90/kg</div>
-            <a href="#" class="product-card-btn" onclick="showModal('Tierra Roja Natural', '../Ocre/img/8.png', 'Bs/ 22.90 por kilogramo', 'Pigmento mineral natural de color rojo intenso, ideal para morteros pigmentados y pinturas artesanales. Extraído de yacimientos naturales con alto contenido de óxidos de hierro.')">Ver Detalles</a>
+            <a href="#" class="product-card-btn" onclick="showModal('Tierra Roja Natural', 'img/8.png', 'Bs/ 22.90 por kilogramo', 'Pigmento mineral natural de color rojo intenso, ideal para morteros pigmentados y pinturas artesanales. Extraído de yacimientos naturales con alto contenido de óxidos de hierro.')">Ver Detalles</a>
           </div>
         </div>
         
@@ -1108,7 +1108,7 @@
           <div class="product-card-info">
             <h3>Tizanol</h3>
             <div class="product-card-price">Bs/ 28.50/kg</div>
-             <a href="#" class="product-card-btn" onclick="showModal('Tizanol', '../Ocre/img/9.png', 'Bs/ 28.50 por kilogramo', 'Pigmento de tizanol , perfecto para acabados arquitectónicos y concretos decorativos. Gran resistencia a la intemperie y luz solar.')">Ver Detalles</a>
+             <a href="#" class="product-card-btn" onclick="showModal('Tizanol', 'img/9.png', 'Bs/ 28.50 por kilogramo', 'Pigmento de tizanol , perfecto para acabados arquitectónicos y concretos decorativos. Gran resistencia a la intemperie y luz solar.')">Ver Detalles</a>
           </div>
         </div>
         
@@ -1119,7 +1119,7 @@
           <div class="product-card-info">
             <h3>Paquetes de Bayer,Tizanol</h3>
             <div class="product-card-price">Bs/ 20.80/kg</div>
-            <a href="#" class="product-card-btn" onclick="showModal('Paquetes de Bayer ', '../Ocre/img/10.png', 'Bs/ 20.80 por kilogramo', 'Productos en general de los que usted no se arrepentira , utilizado tradicionalmente en construcción y arte. Presentación en sacos de 25kg.')">Ver Detalles</a>
+            <a href="#" class="product-card-btn" onclick="showModal('Paquetes de Bayer ', 'img/10.png', 'Bs/ 20.80 por kilogramo', 'Productos en general de los que usted no se arrepentira , utilizado tradicionalmente en construcción y arte. Presentación en sacos de 25kg.')">Ver Detalles</a>
           </div>
         </div>
       </div>
